--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^17.2.0",
     "@angular/ssr": "^17.2.0",
     "express": "^4.18.2",
+    "firebase-tools": "^13.7.3",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.4.3",
     "tslib": "^2.3.0",
